<resources>
    <string name="app_name">Plant_app</string>
    <string name="id_plant_activity_name">Identity Plant Activity</string>
    <string name="add_plant_activity_name">Add Plant Activity</string>


    <string name="main_add_entry_button">Add entry</string>
    <string name="main_identify_plant_button">Identify plant</string>

    <string name="plant_name_item">Plant name</string>
    <string name="water_in_item">Water in</string>
    <string name="water_in_x_days_item">x days</string>
    <string name="watered_item">Watered</string>
    <string name="watered_x_days_ago_item">x days ago</string>
    <string name="give_nutrients_in_item">Give nutrients in</string>
    <string name="nutrients_in_x_days_item">x days</string>
    <string name="given_nutrients_item">Given nutrients</string>
    <string name="nutrients_x_days_ago_item">x days ago</string>

    <string name="add_plant_name_text">Name</string>
    <string name="add_plant_name_example_text">ex. Orchid</string>
    <string name="add_plant_water_every_text">Water every</string>
    <string name="add_plant_water_example_text">ex. 3</string>
    <string name="add_plant_water_days_text">days</string>
    <string name="add_plant_optional_text">optional</string>
    <string name="add_plant_nutrients_every_text">Give nutrients every</string>
    <string name="add_plant_nutrients_example_text">ex. 10</string>
    <string name="add_plant_nutrients_days_text">days</string>
    <string name="add_plant_button_text">Add plant</string>

    <string name="plantId_tutorial_text">Take a picture of your plant
        and we will try and identify what plant it is</string>
    <string name="taken_image_description">Displays the image taken</string>
    <string name="plantId_button_text">Take photo</string>
    <string name="loading_text">Loading result, please wait</string>
    <string name="edit_delete_text">Delete</string>
    <string name="edit_update_text">Update</string>
    <string name="edit_water_every_X_text">Water every X days</string>
    <string name="edit_nutrients_every_X_text">Give nutrients every X days</string>
    <string name="edit_no_selected_plant_text">No plant found</string>
</resources>