<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEFFF8"
    tools:context=".AddPlantActivity">


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_plant_name_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:hint="@string/add_plant_name_example_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />



    <TextView
        android:id="@+id/waterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:text="@string/add_plant_water_every_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/waterNumberEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/add_plant_water_example_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/waterTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/waterTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:text="@string/add_plant_water_days_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/waterNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />



    <TextView
        android:id="@+id/optionalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/add_plant_optional_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#969696"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waterTextView" />

    <TextView
        android:id="@+id/nutrientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/add_plant_nutrients_every_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionalTextView" />

    <EditText
        android:id="@+id/nutrientsNumberEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/add_plant_nutrients_example_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutrientsTextView" />

    <TextView
        android:id="@+id/nutrientsTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_plant_nutrients_days_text"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/nutrientsNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/nutrientsTextView" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addPlant"
        android:text="@string/add_plant_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>