<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="30dp"
    android:paddingBottom="30dp"
    android:background="@drawable/ic_bakgrund">

    <TextView
        android:id="@+id/plant_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/plant_name_item"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="30sp" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/water_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_in_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/water_in_x_days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_in_x_days_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/water_in_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/watered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watered_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/watered_x_days_ago_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watered_x_days_ago_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/watered_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nutrients_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_nutrients_in_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nutrients_in_x_days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrients_in_x_days_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nutrients_in_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/given_nutrients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/given_nutrients_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nutrients_x_days_ago_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrients_x_days_ago_item"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/given_nutrients_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>